--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -77,13 +77,13 @@
         <div id="postEdit">
           <div id="postEditHeader">  
             <form><button type="submit" id="deletePost">	Delete </button></form>
-            <button type="button" onclick="exitEdit()">	&#10006; </button></div>
+            <button type="button" id="exitPost" onclick="exitEdit()">	&#10006; </button></div>
           <form id="editForm">
             <input id="newImg" type="file" size="60" name="postImage" value="Choose Image"
-            accept="image/png, image/gif, image/jpeg" multiple="multiple"></label>
+            accept="image/png, image/gif, image/jpeg" multiple="multiple">
 
-            <label for="newTextInput1">Text: </label>
-            <input id="newTextInput" type="text">
+            <label id="newText" for="newTextInput1">Text: <input id="newTextInput" type="text"></label>
+
   
             <button id="editPost" type="submit">Submit</button>
           </form>
