--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -38,9 +38,9 @@
           <img id="profileImage" src="img/johndoe.png" alt="">
         </div>
         <fieldset id="userFields" disabled>
-          <form id="buttonForm" action="/userProfilePage" enctype="multipart/form-data" method="POST">
+          <form id="buttonForm" action="/userProfilePage.html" enctype="multipart/form-data" method="POST">
             <label for="findImage" class="findImageStyle"> Choose Image
-              <input id="findImage" type="file" size="60" name="imageToUpload" value="Choose Image" /></label>
+            <input id="findImage" type="file" size="60" name="imageToUpload" value="Choose Image" /></label>
             <label for="userFirstName"></label>
             <input id="userFirstName" type="text" value="" required name="userFirstName">
             <label for="userLastName"></label>
