--- a/index2.html
+++ b/index2.html
@@ -56,6 +56,8 @@
     </div>
     <div id="solutions"></div>
   </div>
+  <div id="footer"></div>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/surpriseEvent.js"></script>
   <script src="js/gameBoard.js"></script>
