--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -40,7 +40,7 @@
         <fieldset id="userFields" disabled>
           <form id="buttonForm" action="/userProfilePage.html" enctype="multipart/form-data" method="POST">
             <label for="findImage" class="findImageStyle"> Choose Image
-            <input id="findImage" type="file" size="60" name="imageToUpload" value="Choose Image" /></label>
+            <input id="findImage" type="file" size="60" name="imageToUpload"></label>
             <label for="userFirstName"></label>
             <input id="userFirstName" type="text" value="" required name="userFirstName">
             <label for="userLastName"></label>
@@ -59,13 +59,11 @@
       </div>
       <div id="container4">
         Create a Post:
-
         <form id="postForm">
-          <textarea id="textForPost" type="text" rows="7" cols="1000" require="required" name="textForPost"
-            value="Enter text">Enter text</textarea>
+          <textarea id="textForPost" rows="7" cols="1000" required name="textForPost">Enter text</textarea>
           <br>
-          <input id="findImg" type="file" size="60" name="fileImage" value="Choose Image"
-            accept="image/png, image/gif, image/jpeg" multiple="multiple"></label>
+          <input id="findImg" type="file" size="60" name="fileImage"
+            accept="image/png, image/gif, image/jpeg" multiple="multiple">
           <button id="submitPost" type="submit" value="Submit">Submit</button>
         </form>
         <div id="timeline">
@@ -77,10 +75,10 @@
             <form><button type="submit" id="deletePost">	Delete </button></form>
             <button type="button" id="exitPost" onclick="exitEdit()">	&#10006; </button></div>
           <form id="editForm">
-            <input id="newImg" type="file" size="60" name="postImage" value="Choose Image"
+            <input id="newImg" type="file" size="60" name="postImage"
             accept="image/png, image/gif, image/jpeg" multiple="multiple">
 
-            <label id="newText" for="newTextInput1">Text: <input id="newTextInput" type="text"></label>
+            <label id="newText" for="newTextInput">Text: <input id="newTextInput" type="text"></label>
 
   
             <button id="editPost" type="submit">Submit</button>
