changed css and fixed some issues

--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
           </div>
         </div>
         <form action="/" method="POST">
-          <a href="/index2.html" id="logo">24</a>
+          <a id="logo">24</a>
           <button id="logoutButton" type="submit">Log Out</button>
         </form>
       </nav>
