--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -75,8 +75,10 @@
             <form><button type="submit" id="deletePost">	Delete </button></form>
             <button type="button" id="exitPost" onclick="exitEdit()">	&#10006; </button></div>
           <form id="editForm">
+            <label class="addImg" for="newImg">
             <input id="newImg" type="file" size="60" name="postImage"
             accept="image/png, image/gif, image/jpeg" multiple="multiple">
+          </label>
 
             <label id="newText" for="newTextInput">Text: <input id="newTextInput" type="text"></label>
 
