increased the time for the Easter egg challenge and fixed a bug

--- a/adminDash.html
+++ b/adminDash.html
@@ -46,7 +46,7 @@
 
 
         <div class="search">
-          <form id="searchSection" action="/search.html" method="POST">
+          <form id="searchSection" action="/search" method="POST">
             <input id="searchBar" type="email" placeholder=" Search" name="dashEmail">
             <button type="submit" id="searchUsers">Search</button>
           </form>
