fixed some buggggsss

--- a/adminDash.html
+++ b/adminDash.html
@@ -81,10 +81,10 @@
             <input class="name" type="text" value="" placeholder="First Name" name="adFname" required="required">
             <input class="lname" type="text" value="" placeholder="Last Name" name="adLname" required="required">
             <br>
-            <input id="Val5" type="checkbox" value="" name="Admin">
-            <label for="Val5">is Admin</label>
-            <input id="Val6" type="checkbox" value="" name="Admin">
-            <label for="Val5">not Admin</label>
+            <input id="val5" type="checkbox" value="" name="Admin">
+            <label for="val5">is Admin</label>
+            <input id="val6" type="checkbox" value="" name="Admin">
+            <label for="val5">not Admin</label>
             <button class="add" type="submit">add</button>
           </form>
         </div>
