added logo and favicon to index page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/img/favicon.png">
   <title>24</title>
   <link href="css/index.css" rel="stylesheet">
   <link rel="stylesheet" href="css/navbarFooter.css">
@@ -21,7 +22,7 @@
             <a class="menuItem" href="">Contact</a>
           </div>
         </div>
-        <a id="logo">24</a>
+        <a id="logo"><img src="/img/logo.png"></a>
         <a href="/login.html" id="loginButton">Login</a>
       </nav>
 
