added styled logo and icon for all pages

--- a/adminDash.html
+++ b/adminDash.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/img/favicon.png">
   <title>Admin DashBoard</title>
   <link rel="stylesheet" href="css/navbarFooter.css">
   <link rel="stylesheet" href="css/adminDash.css">
@@ -22,7 +23,7 @@
           </div>
         </div>
         <form action="/" method="POST">
-          <a href="/index2.html" id="logo">24</a>
+          <a id="logo" href="/index2.html"><img id="logoImg" src="/img/logo.png"></a>
           <button id="logoutButton" type="submit">Log Out</button>
         </form>
       </nav>
