--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a class="menuItem" href="">Contact</a>
           </div>
         </div>
-        <a id="logo"><img src="/img/logo.png"></a>
+        <a id="logo"><img id="logoImg" src="/img/logo.png"></a>
         <a href="/login.html" id="loginButton">Login</a>
       </nav>
 
