--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/img/favicon.png">
   <title>24</title>
   <link href="css/index.css" rel="stylesheet">
   <link rel="stylesheet" href="css/navbarFooter.css">
@@ -23,7 +24,7 @@
           </div>
         </div>
         <form action="/" method="POST">
-          <a id="logo">24</a>
+          <a id="logo"><img id="logoImg" src="/img/logo.png"></a>
           <button id="logoutButton" type="submit">Log Out</button>
         </form>
       </nav>
