--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="/img/favicon.png">
   <title>24</title>
   <link href="css/login.css" rel="stylesheet">
   <link rel="stylesheet" href="css/navbarFooter.css">
@@ -21,7 +22,7 @@
             <a class="menuItem" href="">Contact</a>
           </div>
         </div>
-        <a href="/index.html" id="logo">24</a> 
+        <a id="logo" ><img href="index.html" id="logoImg" src="/img/logo.png"></a>
       </nav>
     </div>
     <div id="section">
