--- a/signUp.html
+++ b/signUp.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/img/favicon.png">
   <title>24</title>
   <link href="css/signUp.css" rel="stylesheet">
   <link rel="stylesheet" href="css/navbarFooter.css">
@@ -21,7 +22,7 @@
             <a class="menuItem" href="">Contact</a>
           </div>
         </div>
-        <a href="/index.html" id="logo">24</a> 
+        <a id="logo" href="index.html"><img id="logoImg" src="/img/logo.png"></a>
       </nav>
     </div>
     <div id="section">
@@ -31,8 +32,10 @@
           <label for="emailBox"></label>
           <input id="emailBox" type="email" placeholder=" Enter your Email" required="required" name="emailBox">
           <label for="passowrdBox"></label>
-          <input id="passowrdBox" type="password" placeholder=" Enter your Password" required="required" name="password">
-          <input id="firstNameBox" type="text" placeholder=" Enter your first name" required="required" name="firstName">
+          <input id="passowrdBox" type="password" placeholder=" Enter your Password" required="required"
+            name="password">
+          <input id="firstNameBox" type="text" placeholder=" Enter your first name" required="required"
+            name="firstName">
           <input id="lastNameBox" type="text" placeholder=" Enter your last name" required="required" name="lastName">
           <button type="submit" id="createButton">Create Account</button>
         </form>
