--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/img/favicon.png">
   <title>24</title>
   <link rel="stylesheet" href="css/editPost.css">
   <link rel="stylesheet" href="css/timeline.css">
-  <link rel="stylesheet" href="css/navbarFooter.css">
   <link rel="stylesheet" href="css/userProfilePage.css">
+  <link rel="stylesheet" href="css/navbarFooter.css">
 
 </head>
 
@@ -26,7 +27,7 @@
           </div>
         </div>
         <form action="/" method="POST">
-          <a id="logo">24</a>
+          <a id="logo" href="/index2.html"><img id="logoImg" src="/img/logo.png"></a>
           <button id="logoutButton" type="submit">Log Out</button>
         </form>
       </nav>
@@ -40,7 +41,7 @@
         <fieldset id="userFields" disabled>
           <form id="buttonForm" action="/userProfilePage.html" enctype="multipart/form-data" method="POST">
             <label for="findImage" class="findImageStyle"> Choose Image
-            <input id="findImage" type="file" size="60" name="imageToUpload"></label>
+              <input id="findImage" type="file" size="60" name="imageToUpload"></label>
             <label for="userFirstName"></label>
             <input id="userFirstName" type="text" value="" required name="userFirstName">
             <label for="userLastName"></label>
@@ -62,8 +63,8 @@
         <form id="postForm">
           <textarea id="textForPost" rows="7" cols="1000" required name="textForPost">Enter text</textarea>
           <br>
-          <input id="findImg" type="file" size="60" name="fileImage"
-            accept="image/png, image/gif, image/jpeg" multiple="multiple">
+          <input id="findImg" type="file" size="60" name="fileImage" accept="image/png, image/gif, image/jpeg"
+            multiple="multiple">
           <button id="submitPost" type="submit" value="Submit">Submit</button>
         </form>
         <div id="timeline">
@@ -71,18 +72,19 @@
         </div>
 
         <div id="postEdit">
-          <div id="postEditHeader">  
-            <form><button type="submit" id="deletePost">	Delete </button></form>
-            <button type="button" id="exitPost" onclick="exitEdit()">	&#10006; </button></div>
+          <div id="postEditHeader">
+            <form><button type="submit" id="deletePost"> Delete </button></form>
+            <button type="button" id="exitPost" onclick="exitEdit()"> &#10006; </button>
+          </div>
           <form id="editForm">
             <label class="addImg" for="newImg">
-            <input id="newImg" type="file" size="60" name="postImage"
-            accept="image/png, image/gif, image/jpeg" multiple="multiple">
-          </label>
+              <input id="newImg" type="file" size="60" name="postImage" accept="image/png, image/gif, image/jpeg"
+                multiple="multiple">
+            </label>
 
             <label id="newText" for="newTextInput">Text: <input id="newTextInput" type="text"></label>
 
-  
+
             <button id="editPost" type="submit">Submit</button>
           </form>
 
