Updated the code for creating a post to allow users to post with no image, or with no text.

--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -61,7 +61,7 @@
       <div id="container4">
         Create a Post:
         <form id="postForm">
-          <textarea id="textForPost" rows="7" cols="1000" required name="textForPost">Enter text</textarea>
+          <textarea id="textForPost" rows="5" cols="1000" name="textForPost"></textarea>
           <br>
           <input id="findImg" type="file" size="60" name="fileImage" accept="image/png, image/gif, image/jpeg"
             multiple="multiple">
