added feed back for login and pass word recovery

--- a/passRecov.html
+++ b/passRecov.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>24</title>
-  <link href="css/signUp.css" rel="stylesheet">
+  <link href="css/passRecov.css" rel="stylesheet">
   <link rel="stylesheet" href="css/navbarFooter.css">
 </head>
 
 <body>
   <div id="container1">
     <div id="navbar">
-      <nav> 
+      <nav>
         <div id="dropdown" onclick="displayDropdown()">
           <a id="dropdownButton" onclick="displayDropdown()" href="">Menu</a>
           <div id="menu">
@@ -21,21 +21,27 @@
             <a class="menuItem" href="">Contact</a>
           </div>
         </div>
-        <a href="/index.html" id="logo">24</a> 
+        <a href="/index.html" id="logo">24</a>
       </nav>
     </div>
     <div id="section">
       <div id="container2">
 
-        <form id="container3" action="/signUp.html" method="POST">
-          <label for="emailBox"></label>
-          <input id="emailBox" type="email" placeholder=" Enter your Email" required="required" name="emailBox">
-          <label for="passowrdBox"></label>
-          <input id="passowrdBox" type="password" placeholder=" Enter your Password" required="required" name="password">
-          <input id="firstNameBox" type="text" placeholder=" Enter your first name" required="required" name="firstName">
-          <input id="lastNameBox" type="text" placeholder=" Enter your last name" required="required" name="lastName">
-          <button type="submit" id="createButton">Create Account</button>
-        </form>
+        <div id="contain">
+          <form id="searchSection" action="/accountSearch" method="POST">
+            <!-- <label for="emailRecov"></label> -->
+            <input id="emailRecov" type="email" placeholder=" Enter your Email" required="required" name="emailRecov">
+              <button type="submit" id="searchUsers">Search</button>
+          </form>
+          
+          <div id="found"></div>
+
+          <form id="updateSection" action="/updatePass" method="POST">
+            <input id="newPass" type="password" placeholder=" Enter your new Password" name="newPass">
+            <button type="submit" id="updatePassword">Update</button>
+          </form>
+
+        </div>
 
       </div>
     </div>
