--- a/userTest.html
+++ b/userTest.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="/img/favicon.png">
   <title>24</title>
-  <link rel="stylesheet" href="css/editPost.css">
-  <link rel="stylesheet" href="css/timeline.css">
+  <!-- <link rel="stylesheet" href="css/editPost.css"> -->
+  <!-- <link rel="stylesheet" href="css/timeline.css"> -->
   <link rel="stylesheet" href="css/userProfilePage.css">
   <link rel="stylesheet" href="css/navbarFooter.css">
 
@@ -35,31 +35,10 @@
     <div id="container2">
       <div id="container3">
         <div id="welcome"></div>
-        <div id="imageContainer">
-          <img id="profileImage" src="img/johndoe.png" alt="">
-        </div>
-        <fieldset id="userFields" disabled>
-          <form id="buttonForm" action="/userProfilePage.html" enctype="multipart/form-data" method="POST">
-            <label for="findImage" class="findImageStyle"> Choose Image
-            <input id="findImage" type="file" size="60" name="imageToUpload"></label>
-            <label for="userFirstName"></label>
-            <input id="userFirstName" type="text" value="" required name="userFirstName">
-            <label for="userLastName"></label>
-            <input id="userLastName" type="text" value="" required name="userLastName">
-            <label for="userEmail"></label>
-            <input id="userEmail" type="email" value="" required name="email">
-            <label for="userPassword"></label>
-            <input id="userPassword" type="password" value="" required name="password">
 
-            <button type="submit" id="saveButton">Save</button>
-          </form>
-        </fieldset>
-        <form id="edit">
-          <button type="button" id="editButton" onclick="update()">Edit</button>
-        </form>
       </div>
-      <div id="container4">
-        Create a Post:
+      <!-- <div id="container4"> -->
+        <!-- Create a Post:
         <form id="postForm">
           <textarea id="textForPost" rows="5" cols="1000" name="textForPost"></textarea>
           <br>
@@ -88,13 +67,14 @@
             <button id="editPost" type="submit">Submit</button>
           </form>
 
-        </div>
-      </div>
+        </div> -->
+      <!-- </div> -->
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="js/client.js"></script>
-  <script src="js/userProfilePage.js"></script>
+  <!-- <script src="js/client.js"></script> -->
+  <script src="js/clientTest.js"></script>
+  <!-- <script src="js/userProfilePage.js"></script> -->
 </body>
 
 </html>
