--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
             <a class="menuItem" href="">About</a>
             <a class="menuItem" href="">Contact</a>
             <a href="/userProfilePage.html">My Profile</a>
-            <a href="/userTest.html">Test</a>
+            <a href="/userInformation.html">My Info</a>
           </div>
         </div>
         <form action="/" method="POST">
