--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </div>
     <div id="section">
       <div id="container2">
+        
         <div id="solutionContainer">
           <div id="solutionBox" onclick="playAgain()"><p id="solutionLine"></p></div>
         </div>
@@ -52,8 +53,12 @@
         </div>
       </div>
     </div>
-    <div id="solutions">
-      my solutions
+    <p class="hoverInstructions">how to play</p>
+    <div id="info-modal" class="modal-dialog">
+      <div>
+        <a href="#close" title="Close" class="close">x</a>
+        <p>Find an equation that results in 24 using all of the six randomly generated numbers once and only once!</p>
+      </div>
     </div>
   </div>
   <div id="footer"></div>
