Edited user profile edit function

--- a/userInformation.html
+++ b/userInformation.html
@@ -10,6 +10,7 @@
   <!-- <link rel="stylesheet" href="css/timeline.css"> -->
   <link rel="stylesheet" href="css/userProfilePage.css">
   <link rel="stylesheet" href="css/navbarFooter.css">
+  <link rel="stylesheet" href="css/userInformation.css">
 
 </head>
 
@@ -40,11 +41,11 @@
         </div>
         <fieldset id="userFields" disabled>
           <form id="buttonForm">
-            <label for="findImage" class="findImageStyle"> Choose Image
+            <label for="findImage" class="findImageStyle" id="chooseImage"> Choose Image
               <input id="findImage" type="file" size="60" name="imageToUpload"></label>
             <label for="userFirstName"></label>
             <input id="userFirstName" type="text" value="" required name="userFirstName">
-            <label for="userLastName"></label>
+            <label for="userLastName"></label> 
             <input id="userLastName" type="text" value="" required name="userLastName">
             <label for="userEmail"></label>
             <input id="userEmail" type="email" value="" required name="email">
