Switched userInformation page to display in userProfilePage

--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -55,7 +55,7 @@
           </form>
         </fieldset>
         <form id="edit">
-          <a type="button" id="editButton" onclick="update()">Edit</a>
+          <button type="button" id="editButton" onclick="update()">Edit</button>
         </form>
       </div>
       <div id="container4">
@@ -93,8 +93,8 @@
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <!-- <script src="js/client.js"></script> -->
-  <!-- <script src="js/userProfilePage.js"></script> -->
+  <script src="js/client.js"></script>
+  <script src="js/userProfilePage.js"></script>
   <script src="js/userInformation.js"></script>
 </body>
 
