Adjusted game logic for cleaner code

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="info-modal" class="modal-dialog">
       <div>
         <a href="#close" title="Close" class="close">x</a>
-        <p>Find an equation that results in 24 using all of the six randomly generated numbers once and only once!</p>
+        <p>Find an equation that results in 24 using all of the six randomly generated numbers once and only once!<br><br>Click the solution box to play again!</p>
       </div>
     </div>
   </div>
