--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -41,7 +41,7 @@
         <fieldset id="userFields" disabled>
           <form id="buttonForm" action="/userProfilePage.html" enctype="multipart/form-data" method="POST">
             <label for="findImage" class="findImageStyle"> Choose Image
-            <input id="findImage" type="file" size="60" name="imageToUpload"></label>
+              <input id="findImage" type="file" size="60" name="imageToUpload"></label>
             <label for="userFirstName"></label>
             <input id="userFirstName" type="text" value="" required name="userFirstName">
             <label for="userLastName"></label>
@@ -72,22 +72,23 @@
         </div>
 
         <div id="postEdit">
-          <div id="postEditHeader">
-            <form><button type="submit" id="deletePost"> Delete </button></form>
-            <button type="button" id="exitPost" onclick="exitEdit()"> &#10006; </button>
-          </div>
-          <form id="editForm">
-            <label class="addImg" for="newImg">
-              <input id="newImg" type="file" size="60" name="postImage" accept="image/png, image/gif, image/jpeg"
-                multiple="multiple">
-            </label>
+          
+            <div id="postEditHeader">
+              <button type="button" id="exitPost" onclick="exitEdit()"> &#10006; </button>
+            </div>
+            <form id="editForm">
+              <label for="newImg" class="addImg"> Choose Image
+                <input id="newImg" type="file" size="60" name="postImage" accept="image/png, image/gif, image/jpeg"
+                  multiple="multiple">
+              </label>
 
-            <label id="newText" for="newTextInput">Text: <input id="newTextInput" type="text"></label>
+              <label id="newText" for="newTextInput"><input id="newTextInput" type="text" placeholder="Enter Text"></label>
 
 
-            <button id="editPost" type="submit">Submit</button>
-          </form>
-
+              <button id="editPost" type="submit">Submit</button>
+            </form>
+            <form id="deletePostForm"><button type="submit" id="deletePost"> Delete Post</button></form>
+          
         </div>
       </div>
     </div>
