--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -42,6 +42,7 @@
           <form id="buttonForm" action="/userProfilePage.html" enctype="multipart/form-data" method="POST">
             <label for="findImage" class="findImageStyle"> Choose Image
               <input id="findImage" type="file" size="60" name="imageToUpload"></label>
+              <label id="findImageName"></label>
             <label for="userFirstName"></label>
             <input id="userFirstName" type="text" value="" required name="userFirstName">
             <label for="userLastName"></label>
@@ -63,8 +64,11 @@
         <form id="postForm">
           <textarea id="textForPost" rows="5" cols="1000" name="textForPost"></textarea>
           <br>
+          <br>
+          <label for="findImg" class="findImgClass"> Choose Image
           <input id="findImg" type="file" size="60" name="fileImage" accept="image/png, image/gif, image/jpeg"
-            multiple="multiple">
+            multiple="multiple"></label>
+          <lable id="findImgName"></lable>
           <button id="submitPost" type="submit" value="Submit">Submit</button>
         </form>
         <div id="timeline">
@@ -77,6 +81,7 @@
               <button type="button" id="exitPost" onclick="exitEdit()"> &#10006; </button>
             </div>
             <form id="editForm">
+              <label id="newImgName"></label>
               <label for="newImg" class="addImg"> Choose Image
                 <input id="newImg" type="file" size="60" name="postImage" accept="image/png, image/gif, image/jpeg"
                   multiple="multiple">
