--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
     <div id="section">
       <div id="container2">
+        
         <div id="solutionContainer">
           <div id="solutionBox" onclick="playAgain()"><p id="solutionLine"></p></div>
         </div>
@@ -53,10 +54,15 @@
         </div>
       </div>
     </div>
-    <div id="solutions"></div>
+    <p class="hoverInstructions">how to play</p>
+    <div id="info-modal" class="modal-dialog">
+      <div>
+        <a href="#close" title="Close" class="close">x</a>
+        <p>Find an equation that results in 24 using all of the six randomly generated numbers once and only once!<br><br>Click the solution box to play again!</p>
+      </div>
+    </div>
   </div>
   <div id="footer"></div>
-  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/surpriseEvent.js"></script>
   <script src="js/gameBoard.js"></script>
