--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,7 @@
     <div id="section">
       <div id="container2">
         <div id="solutionContainer">
-          <div id="solutionBox" onclick="playAgain()"><p id="solutionLine"></p></div>
+          <input id="solutionBox" type="text" placeholder="Enter Solution">
         </div>
         <div id="buttonContainer">
           <input type="button" value="1" id="button1">
@@ -51,18 +51,11 @@
           <input type="button" value=")" id="closeBracket">
         </div>
         <div id="submitContainer">
-          <input type="button" value="Submit" id="enterButton" onclick="submitAnswer()"/>
-          <input type="button" value="Clear" id="clearButton" onclick="clearBoard()">
+          <input type="button" value="Submit" id="enterButton">
         </div>
       </div>
     </div>
-    <p class="hoverInstructions">how to play</p>
-    <div id="info-modal" class="modal-dialog">
-      <div>
-        <a href="#close" title="Close" class="close">x</a>
-        <p>Find an equation that results in 24 using all of the six randomly generated numbers once and only once!<br><br>Click the solution box to play again!</p>
-      </div>
-    </div>
+    <div id="solutions"></div>
   </div>
   <div id="footer"></div>
 
