added id tag to label

--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -40,7 +40,7 @@
         </div>
         <fieldset id="userFields" disabled>
           <form id="buttonForm">
-            <label for="findImage" class="findImageStyle"> Choose Image
+            <label for="findImage" class="findImageStyle" id="chooseImage"> Choose Image
               <input id="findImage" type="file" size="60" name="imageToUpload"></label>
               <label id="findImageName"></label>
             <label for="userFirstName"></label>
@@ -56,7 +56,7 @@
           </form>
         </fieldset>
         <form id="edit">
-          <button type="button" id="editButton" onclick="update()">Edit</button>
+          <button type="button" id="editButton" onclick="update()" >Edit</button>
         </form>
       </div>
       <div id="container4">
