--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -42,6 +42,7 @@
           <form id="buttonForm">
             <label for="findImage" class="findImageStyle" id="chooseImage"> Choose Image
               <input id="findImage" type="file" size="60" name="imageToUpload"></label>
+              <label id="findImageName"></label>
             <label for="userFirstName"></label>
             <input id="userFirstName" type="text" value="" required name="userFirstName">
             <label for="userLastName"></label>
@@ -55,7 +56,7 @@
           </form>
         </fieldset>
         <form id="edit">
-          <button type="button" id="editButton" onclick="update()">Edit</button>
+          <button type="button" id="editButton" onclick="update()" >Edit</button>
         </form>
       </div>
       <div id="container4">
@@ -63,8 +64,11 @@
         <form id="postForm">
           <textarea id="textForPost" rows="5" cols="1000" name="textForPost"></textarea>
           <br>
+          <br>
+          <label for="findImg" class="findImgClass"> Choose Image
           <input id="findImg" type="file" size="60" name="fileImage" accept="image/png, image/gif, image/jpeg"
-            multiple="multiple">
+            multiple="multiple"></label>
+          <lable id="findImgName"></lable>
           <button id="submitPost" type="submit" value="Submit">Submit</button>
         </form>
         <div id="timeline">
@@ -72,22 +76,24 @@
         </div>
 
         <div id="postEdit">
-          <div id="postEditHeader">
-            <form><button type="submit" id="deletePost"> Delete </button></form>
-            <button type="button" id="exitPost" onclick="exitEdit()"> &#10006; </button>
-          </div>
-          <form id="editForm">
-            <label class="addImg" for="newImg">
-              <input id="newImg" type="file" size="60" name="postImage" accept="image/png, image/gif, image/jpeg"
-                multiple="multiple">
-            </label>
+          
+            <div id="postEditHeader">
+              <button type="button" id="exitPost" onclick="exitEdit()"> &#10006; </button>
+            </div>
+            <form id="editForm">
+              <label id="newImgName"></label>
+              <label for="newImg" class="addImg"> Choose Image
+                <input id="newImg" type="file" size="60" name="postImage" accept="image/png, image/gif, image/jpeg"
+                  multiple="multiple">
+              </label>
 
-            <label id="newText" for="newTextInput">Text: <input id="newTextInput" type="text"></label>
+              <label id="newText" for="newTextInput"><input id="newTextInput" type="text" placeholder="Enter Text"></label>
 
 
-            <button id="editPost" type="submit">Submit</button>
-          </form>
-
+              <button id="editPost" type="submit">Submit</button>
+            </form>
+            <form id="deletePostForm"><button type="submit" id="deletePost"> Delete Post</button></form>
+          
         </div>
       </div>
     </div>
