added about page and changed css for admin dash

--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
         <div id="dropdown" onclick="displayDropdown()">
           <a id="dropdownButton" onclick="displayDropdown()">Menu</a>
           <div id="menu">
-            <a class="menuItem" href="">About</a>
+            <a class="menuItem" href="/about.html">About</a>
             <a href="/userProfilePage.html">Profile</a>
           </div>
         </div>
