--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -20,7 +20,7 @@
         <div id="dropdown">
           <a href="" id="dropdownButton">Menu</a>
           <div id="menu">
-            <a class="menuItem" href="">About</a>
+            <a class="menuItem" href="/about.html">About</a>
             <a href="/index2.html">Back</a>
           </div>
         </div>
