--- a/signUp.html
+++ b/signUp.html
@@ -17,7 +17,7 @@
         <div id="dropdown" onclick="displayDropdown()">
           <a id="dropdownButton" onclick="displayDropdown()" href="">Menu</a>
           <div id="menu">
-            <a class="menuItem" href="">About</a>
+            <a class="menuItem" href="/about.html">About</a>
           </div>
         </div>
         <a id="logo" href="/index.html"><img id="logoImg" src="/img/logo.png" alt=""></a>
