Changed directory route when clicking on logo in admindash.html

--- a/adminDash.html
+++ b/adminDash.html
@@ -21,7 +21,7 @@
           </div>
         </div>
         <form action="/" method="POST">
-          <a id="logo" href="/index2.html"><img id="logoImg" src="/img/logo.png" alt=""></a>
+          <a id="logo" href="/adminDash.html"><img id="logoImg" src="/img/logo.png" alt=""></a>
           <button id="logoutButton" type="submit">Log Out</button>
         </form>
       </nav>
