--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/img/favicon.png">
   <title>24</title>
   <link href="css/index.css" rel="stylesheet">
   <link rel="stylesheet" href="css/navbarFooter.css">
@@ -16,14 +17,12 @@
         <div id="dropdown" onclick="displayDropdown()">
           <a id="dropdownButton" onclick="displayDropdown()">Menu</a>
           <div id="menu">
-            <a class="menuItem" href="">Leaderboard</a>
-            <a class="menuItem" href="">About</a>
-            <a class="menuItem" href="">Contact</a>
-            <a href="/userProfilePage.html">My Profile</a>
+            <a class="menuItem" href="/about.html">About</a>
+            <a href="/userProfilePage.html">Profile</a>
           </div>
         </div>
         <form action="/" method="POST">
-          <a href="/index2.html" id="logo">24</a>
+          <a id="logo"><img id="logoImg" src="/img/logo.png" alt=""></a>
           <button id="logoutButton" type="submit">Log Out</button>
         </form>
       </nav>
@@ -32,7 +31,7 @@
     <div id="section">
       <div id="container2">
         <div id="solutionContainer">
-          <input id="solutionBox" type="text" placeholder="Enter Solution">
+          <div id="solutionBox" onclick="playAgain()"><p id="solutionLine"></p></div>
         </div>
         <div id="buttonContainer">
           <input type="button" value="1" id="button1">
@@ -50,16 +49,23 @@
           <input type="button" value=")" id="closeBracket">
         </div>
         <div id="submitContainer">
-          <input type="button" value="Submit" id="enterButton">
+          <input type="button" value="Submit" id="enterButton" onclick="submitAnswer()"/>
+          <input type="button" value="Clear" id="clearButton" onclick="clearBoard()">
         </div>
       </div>
     </div>
-    <div id="solutions">
-      my solutions
+    <p class="hoverInstructions">how to play</p>
+    <div id="info-modal" class="modal-dialog">
+      <div>
+        <a href="#close" title="Close" class="close">x</a>
+        <p>Find an equation that results in 24 using all of the six randomly generated numbers once and only once!<br><br>Click the solution box to play again!</p>
+      </div>
     </div>
   </div>
   <div id="footer"></div>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="js/surpriseEvent.js"></script>
   <script src="js/gameBoard.js"></script>
   <script src="js/footer.js"></script>
 </body>
