--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/img/favicon.png">
   <title>24</title>
   <link href="css/index.css" rel="stylesheet">
   <link rel="stylesheet" href="css/navbarFooter.css">
@@ -14,14 +15,12 @@
     <div id="navbar">
       <nav>
         <div id="dropdown" onclick="displayDropdown()">
-          <a  id="dropdownButton" onclick="displayDropdown()">Menu</a>
+          <a id="dropdownButton" onclick="displayDropdown()">Menu</a>
           <div id="menu">
-            <a class="menuItem" href="">Leaderboard</a>
-            <a class="menuItem" href="">About</a>
-            <a class="menuItem" href="">Contact</a>
+            <a class="menuItem" href="/about.html">About</a>
           </div>
         </div>
-        <a href="/index.html" id="logo">24</a>
+        <a id="logo"><img id="logoImg" src="/img/logo.png" alt=""></a>
         <a href="/login.html" id="loginButton">Login</a>
       </nav>
 
@@ -63,6 +62,7 @@
   </div>
   <div id="footer"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="js/surpriseEvent.js"></script>
   <script src="js/gameBoard.js"></script>
   <script src="js/footer.js"></script>
 </body>
