--- a/signUp.html
+++ b/signUp.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/img/favicon.png">
   <title>24</title>
   <link href="css/signUp.css" rel="stylesheet">
   <link rel="stylesheet" href="css/navbarFooter.css">
@@ -12,16 +13,14 @@
 <body>
   <div id="container1">
     <div id="navbar">
-      <nav>
+      <nav> 
         <div id="dropdown" onclick="displayDropdown()">
           <a id="dropdownButton" onclick="displayDropdown()" href="">Menu</a>
           <div id="menu">
-            <a class="menuItem" href="">Leaderboard</a>
-            <a class="menuItem" href="">About</a>
-            <a class="menuItem" href="">Contact</a>
+            <a class="menuItem" href="/about.html">About</a>
           </div>
         </div>
-        <a href="/index.html" id="logo">24</a> 
+        <a id="logo" href="/index.html"><img id="logoImg" src="/img/logo.png" alt=""></a>
       </nav>
     </div>
     <div id="section">
@@ -31,8 +30,10 @@
           <label for="emailBox"></label>
           <input id="emailBox" type="email" placeholder=" Enter your Email" required="required" name="emailBox">
           <label for="passowrdBox"></label>
-          <input id="passowrdBox" type="password" placeholder=" Enter your Password" required="required" name="password">
-          <input id="firstNameBox" type="text" placeholder=" Enter your first name" required="required" name="firstName">
+          <input id="passowrdBox" type="password" placeholder=" Enter your Password" required="required"
+            name="password">
+          <input id="firstNameBox" type="text" placeholder=" Enter your first name" required="required"
+            name="firstName">
           <input id="lastNameBox" type="text" placeholder=" Enter your last name" required="required" name="lastName">
           <button type="submit" id="createButton">Create Account</button>
         </form>
