--- a/index2.html
+++ b/index2.html
@@ -17,14 +17,12 @@
         <div id="dropdown" onclick="displayDropdown()">
           <a id="dropdownButton" onclick="displayDropdown()">Menu</a>
           <div id="menu">
-            <a class="menuItem" href="">Leaderboard</a>
-            <a class="menuItem" href="">About</a>
-            <a class="menuItem" href="">Contact</a>
-            <a href="/userProfilePage.html">My Profile</a>
+            <a class="menuItem" href="/about.html">About</a>
+            <a href="/userProfilePage.html">Profile</a>
           </div>
         </div>
         <form action="/" method="POST">
-          <a id="logo"><img id="logoImg" src="/img/logo.png"></a>
+          <a id="logo"><img id="logoImg" src="/img/logo.png" alt=""></a>
           <button id="logoutButton" type="submit">Log Out</button>
         </form>
       </nav>
