--- a/signUp.html
+++ b/signUp.html
@@ -17,12 +17,10 @@
         <div id="dropdown" onclick="displayDropdown()">
           <a id="dropdownButton" onclick="displayDropdown()" href="">Menu</a>
           <div id="menu">
-            <a class="menuItem" href="">Leaderboard</a>
-            <a class="menuItem" href="">About</a>
-            <a class="menuItem" href="">Contact</a>
+            <a class="menuItem" href="/about.html">About</a>
           </div>
         </div>
-        <a id="logo" href="index.html"><img id="logoImg" src="/img/logo.png"></a>
+        <a id="logo" href="/index.html"><img id="logoImg" src="/img/logo.png" alt=""></a>
       </nav>
     </div>
     <div id="section">
