--- a/userProfilePage.html
+++ b/userProfilePage.html
@@ -20,14 +20,12 @@
         <div id="dropdown">
           <a href="" id="dropdownButton">Menu</a>
           <div id="menu">
-            <a class="menuItem" href="">Leaderboard</a>
-            <a class="menuItem" href="">About</a>
-            <a class="menuItem" href="">Contact</a>
+            <a class="menuItem" href="/about.html">About</a>
             <a href="/index2.html">Back</a>
           </div>
         </div>
         <form action="/" method="POST">
-          <a id="logo" href="/index2.html"><img id="logoImg" src="/img/logo.png"></a>
+          <a id="logo" href="/index2.html"><img id="logoImg" src="/img/logo.png" alt=""></a>
           <button id="logoutButton" type="submit">Log Out</button>
         </form>
       </nav>
@@ -68,7 +66,7 @@
           <label for="findImg" class="findImgClass"> Choose Image
           <input id="findImg" type="file" size="60" name="fileImage" accept="image/png, image/gif, image/jpeg"
             multiple="multiple"></label>
-          <lable id="findImgName"></lable>
+          <div id="findImgName"></div>
           <button id="submitPost" type="submit" value="Submit">Submit</button>
         </form>
         <div id="timeline">
