--- a/about.html
+++ b/about.html
@@ -24,14 +24,13 @@
       </nav>
 
     </div>
-    <div id="section">
-      <span>Hello There!</span>
-    </div>
-    <p class="hoverInstructions">how to play</p>
-    <div id="info-modal" class="modal-dialog">
-      <div>
-        <a href="#close" title="Close" class="close">x</a>
-        <p>Find an equation that results in 24 using all of the six randomly generated numbers once and only once!<br><br>Click the solution box to play again!</p>
+    <div id="contain">
+      <div id="info">
+        <span>Hello There!gariomjvofvmidfovisiofoifoifgoifsvsvnoifvonfv</span>
+        <br>
+        <span>roijfeosfoijsfagfgjofsjoi[sfoijfsoijfsvsojifvjoivfjfvnjkfsvjfsvs</span>
+        <br>
+        <span>oijcsdojidsfjosdjosdjocvsnjkcsvnjcvjnkfvknjvfkjfvnkjfvnjkvfjkvfjnvfnjkfv</span>
       </div>
     </div>
   </div>
